Fix buttons and html to md